# churn-prediction

./: pyproject.toml
churn_prediction/Class/: QueryBuilder.py  bussiness_translation.py  eda.py  fine_tuning.py
churn_prediction/data/interim/: churn.db
churn_prediction/data/processed/: X_train.csv  X_train.parquet  churn.csv
churn_prediction/data/raw/: conversion.py
churn_prediction/helpers/: FeatureEngineering.py  Queries.py
churn_prediction/helpers/classes/: DataVisualizer.py  FeatureSelection.py  MLPipeline.py
churn_prediction/helpers/functions/: descriptive_statistics.py
churn_prediction/notebooks/: c1.ipynb  c1_autoML.ipynb  c1_pycaret.ipynb
