[tool.poetry]
name = "churn-prediction"
version = "0.3.0"
description = ""
authors = ["“Gutto <“guttolaudie@gmail.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.23.0"
polars = "^0.20.22"
duckdb = "^0.10.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.3.0"
ignr = "^2.2"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
