[tool.poetry]
name = "churn-prediction"
version = "0.5.0"
description = ""
authors = ["Gutto <“guttolaudie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipython = "^8.23.0"
duckdb = "^0.10.2"
numpy = "^1.26.4"
pandas = "^2.1.5"
pyarrow = "^16.0.0"
scikit-learn = "^1.4.2"
plotly = "^5.21.0"
ipykernel = "^6.29.4"
nbformat = "^5.10.4"
setuptools = "^69.5.1"
ydata-profiling = "^4.7.0"
xgboost = "^2.0.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.3.0"
ignr = "^2.2"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
ruff = "^0.3.7"
notebook = "^7.1.3"
h2o = "^3.46.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
